--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -1,18 +1,16 @@
 <header>
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+      
       <% if (currentUser) { %>
-        <li><a href="/todos">To-Do List</a></li>
-        <li><a href="/auth/logout">Logout</a></li>
+        <li><a href="/todos"><i class="fas fa-list"></i> To-Do List</a></li>
+        <li><a href="/auth/logout"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         <li>Welcome, <%= currentUser.username %>!</li>
       <% } else { %>
-        <li><a href="/auth/login">Login</a></li>
-        <li><a href="/auth/register">Register</a></li>
+        <li><a href="/auth/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        <li><a href="/auth/register"><i class="fas fa-user-plus"></i> Register</a></li>
       <% } %>
     </ul>
   </nav>
 </header>
-
-
-
